--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>19</java.version>
+		<spring-security.version>6.0.2</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +67,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 			<version>6.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+
 		</dependency>
 		<dependency>
 			<groupId>jakarta.validation</groupId>
